@@ -20,8 +20,13 @@ CREATE TABLE `ps_map_data_source_gungames` (
   `terroristwon` smallint unsigned NOT NULL default '0',
   `terroristlost` smallint unsigned NOT NULL default '0',
   `lvlsgained` smallint unsigned NOT NULL default '0',
-  `lvlsstolen` smallint unsigned NOT NULL default '0',
   `lvlslost` smallint unsigned NOT NULL default '0',
+  `knifelvlsgained` smallint unsigned NOT NULL default '0',
+  `knifelvlsgiven` smallint unsigned NOT NULL default '0',
+  `knifesteal` smallint unsigned NOT NULL default '0',
+  `leader` smallint unsigned NOT NULL default '0',
+  `triplelevel` smallint unsigned NOT NULL default '0',
+  `lastlevel` smallint unsigned NOT NULL default '0',
   `winsgained` smallint unsigned NOT NULL default '0',
   PRIMARY KEY  (`dataid`)
 ) ENGINE=MyISAM DEFAULT CHARSET=utf8mb4 COLLATE utf8mb4_general_ci;
@@ -52,8 +57,13 @@ CREATE TABLE `ps_plr_data_source_gungames` (
   `terroristlost` smallint unsigned NOT NULL default '0',
   `lvlsgained` smallint unsigned NOT NULL default '0',
   `lvlsgiven` smallint unsigned NOT NULL default '0',
-  `lvlsstolen` smallint unsigned NOT NULL default '0',
   `lvlslost` smallint unsigned NOT NULL default '0',
+  `knifelvlsgained` smallint unsigned NOT NULL default '0',
+  `knifelvlsgiven` smallint unsigned NOT NULL default '0',
+  `knifesteal` smallint unsigned NOT NULL default '0',
+  `leader` smallint unsigned NOT NULL default '0',
+  `triplelevel` smallint unsigned NOT NULL default '0',
+  `lastlevel` smallint unsigned NOT NULL default '0',
   `winsgained` smallint unsigned NOT NULL default '0',
   `winsgiven` smallint unsigned NOT NULL default '0',
   PRIMARY KEY  (`dataid`)
@@ -85,8 +95,13 @@ CREATE TABLE `ps_plr_maps_source_gungames` (
   `terroristlost` smallint unsigned NOT NULL default '0',
   `lvlsgained` smallint unsigned NOT NULL default '0',
   `lvlsgiven` smallint unsigned NOT NULL default '0',
-  `lvlsstolen` smallint unsigned NOT NULL default '0',
   `lvlslost` smallint unsigned NOT NULL default '0',
+  `knifelvlsgained` smallint unsigned NOT NULL default '0',
+  `knifelvlsgiven` smallint unsigned NOT NULL default '0',
+  `knifesteal` smallint unsigned NOT NULL default '0',
+  `leader` smallint unsigned NOT NULL default '0',
+  `triplelevel` smallint unsigned NOT NULL default '0',
+  `lastlevel` smallint unsigned NOT NULL default '0',
   `winsgained` smallint unsigned NOT NULL default '0',
   `winsgiven` smallint unsigned NOT NULL default '0',
   PRIMARY KEY  (`dataid`)
@@ -137,38 +152,51 @@ INSERT INTO `ps_config_events` (`id`, `gametype`, `modtype`, `eventname`, `alias
 
 INSERT INTO `ps_config_plrbonuses` (`id`, `eventname`, `enactor`, `enactor_team`, `victim`, `victim_team`, `description`, `gametype`, `modtype`) 
     VALUES 
-        (1,'planted_the_bomb',2,1,0,-1,'When a player plants the bomb','source','gungames'),
-        (2,'defused_the_bomb',2,0,-1,0,'A player defused the bomb successfully. Use the \'bomb_defused\' event for team bonses.','source','gungames'),
-        (3,'rescued_a_hostage',3,0,0,0,'When a player rescues a hostage','source','gungames'),
-        (8,'bomb_runner',1,0,0,0,'Player spawned with and planted the bomb w/o dropping it','source','gungames'),
-        (7,'bomb_defused',0,2,0,-2,'TEAM event that fires when a round ends and the CT team defuses the bomb (use \'defused_the_bomb\' for enactor bonus)','source','gungames'),
-        (10,'target_bombed',5,2,0,-2,'TEAM event that fires when the bomb explodes and the terrorists win','source','gungames'),
-        (12,'all_hostages_rescued',0,2,0,-2,'TEAM event that fires when all hostages on a CS map have been rescued (no enactor)','source','gungames'),
-        (13,'target_saved',0,5,0,-5,'TEAM event that fires when a round ends and the terrorists did not plant a bomb','source','gungames'),
-        (14,'hostages_not_rescued',0,2,0,-2,'TEAM event that fires when a round ends and the hostages are NOT rescued','source','gungames'),
-        (28,'killed_a_hostage',-3,0,0,0,'When a player kills a hostage','source','gungames'),
-        (29,'escaped_as_vip',10,0,0,0,'When a player escapes an \'es\' map as the VIP (use \'vip_escaped\' for team bonuses)','source','gungames'),
-        (30,'vip_escaped',0,5,0,-5,'TEAM event that fires when the VIP escapes the map (use escaped_as_vip for enactor bonus)','source','gungames'),
-        (31,'assassinated_the_vip',10,0,-5,0,'When a player kills the VIP (use \'vip_assassinated\' for team bonuses)','source','gungames'),
-        (32,'vip_assassinated',0,10,0,-10,'TEAM event that fires when the VIP was killed (use \'assassinated_the_vip\' for enactor bonus)','source','gungames'),
-        (33,'vip_not_escaped',0,5,0,-5,'TEAM event that fires when the VIP does not escape and terrorists win','source','gungames'),
-        (34,'ffkill',-10,0,0,0,'when a player kills a team mate','','');
+        (1,'planted_the_bomb',2,1,0,-1,'When a player plants the bomb','source','cstrikes'),
+        (2,'defused_the_bomb',2,0,-1,0,'A player defused the bomb successfully. Use the \'bomb_defused\' event for team bonses.','source','cstrikes'),
+        (3,'rescued_a_hostage',3,0,0,0,'When a player rescues a hostage','source','cstrikes'),
+        (8,'bomb_runner',1,0,0,0,'Player spawned with and planted the bomb w/o dropping it','source','cstrikes'),
+        (7,'bomb_defused',0,2,0,-2,'TEAM event that fires when a round ends and the CT team defuses the bomb (use \'defused_the_bomb\' for enactor bonus)','source','cstrikes'),
+        (10,'target_bombed',5,2,0,-2,'TEAM event that fires when the bomb explodes and the terrorists win','source','cstrikes'),
+        (12,'all_hostages_rescued',0,2,0,-2,'TEAM event that fires when all hostages on a CS map have been rescued (no enactor)','source','cstrikes'),
+        (13,'target_saved',0,5,0,-5,'TEAM event that fires when a round ends and the terrorists did not plant a bomb','source','cstrikes'),
+        (14,'hostages_not_rescued',0,2,0,-2,'TEAM event that fires when a round ends and the hostages are NOT rescued','source','cstrikes'),
+        (28,'killed_a_hostage',-3,0,0,0,'When a player kills a hostage','source','cstrikes'),
+        (29,'escaped_as_vip',10,0,0,0,'When a player escapes an \'es\' map as the VIP (use \'vip_escaped\' for team bonuses)','source','cstrikes'),
+        (30,'vip_escaped',0,5,0,-5,'TEAM event that fires when the VIP escapes the map (use escaped_as_vip for enactor bonus)','source','cstrikes'),
+        (31,'assassinated_the_vip',10,0,-5,0,'When a player kills the VIP (use \'vip_assassinated\' for team bonuses)','source','cstrikes'),
+        (32,'vip_assassinated',0,10,0,-10,'TEAM event that fires when the VIP was killed (use \'assassinated_the_vip\' for enactor bonus)','source','cstrikes'),
+        (33,'vip_not_escaped',0,5,0,-5,'TEAM event that fires when the VIP does not escape and terrorists win','source','cstrikes'),
+        (34,'ffkill',-10,0,0,0,'when a player kills a team mate','',''),
+        (80,'gg_leader',1,0,0,0,'player was appointed as leader','source','gungames'),
+        (81,'gg_levelup',1,0,0,0,'player gained a level','source','gungames'),
+        (82,'gg_leveldown',-1,0,0,0,'player lost a level','source','gungames'),
+        (83,'gg_knife_level',1,0,0,0,'player gained a knife level','source','gungames'),
+        (84,'gg_knife_steal',2,0,0,0,'player stole a level with a knife','source','gungames'),
+        (85,'gg_triple_level',3,0,0,0,'player gained 3 levels in a triple level event','source','gungames'),
+        (86,'gg_last_level',1,0,0,0,'player reached the maximum level','source','gungames'),
+        (87,'gg_win',0,5,0,-5,'TEAM event that fires when a round ends and a team won','source','gungames');
 
 INSERT INTO `ps_config_awards` (`id`, `enabled`, `idx`, `type`, `negative`, `class`, `name`, `groupname`, `phrase`, `expr`, `order`, `where`, `limit`, `format`, `gametype`, `modtype`, `rankedonly`, `description`) 
     VALUES 
         (4,1,10,'player',0,'','Highest Skill','','{$player.link} has the highest skill with {$award.value}','{$skill}','desc','',0,'%.02f',NULL,NULL,1,'Player with the highest skill'),
-        (5,1,90,'player',0,'','Most Bombings','','{$player.link} has the most successful bombings ({$award.value} bombs)','{$bombexploded}','desc','',25,'commify','source','gungames',1,'Players with the most successful bombed targets'),
+        (5,1,90,'player',0,'','Most Bombings','','{$player.link} has the most successful bombings ({$award.value} bombs)','{$bombexploded}','desc','',25,'commify','source','cstrikes',1,'Players with the most successful bombed targets'),
         (6,1,20,'player',0,'','Most Kills','','{$player.link} has killed the most players ({$award.value})','{$kills}','desc','',0,'commify',NULL,NULL,1,'Player with the most kills (any team)'),
-        (7,1,110,'player',0,'','Most Hostages Rescued','','{$player.link} has rescued the most hostages ({$award.value})','{$rescuedhostages}','desc','',0,'commify','source','gungames',1,'Players that risk life and limb to save hostages!'),
+        (7,1,110,'player',0,'','Most Hostages Rescued','','{$player.link} has rescued the most hostages ({$award.value})','{$rescuedhostages}','desc','',0,'commify','source','cstrikes',1,'Players that risk life and limb to save hostages!'),
         (8,1,70,'player',0,'','Most Time Online','','{$player.link} has been online the longest ({$award.value})','{$onlinetime}','desc','',25,'compacttime',NULL,NULL,1,'Player with the most online time'),
         (9,1,190,'weaponclass',0,'','Most Kills with {$weapon.class} weapons','','{$player.link} has the most {$weapon.class} kills ({$award.value})','{$kills}','desc','',0,'commify',NULL,NULL,1,'Most kills with {$weapon.class} type weapons (including: {$weapon.list}).'),
         (10,1,180,'weapon',0,'','Most Kills with {$weapon.name}','','{$player.link} has the most {$weapon.link} kills ({$award.value})','{$kills}','desc','',0,'commify',NULL,NULL,1,'Most kills with a {$weapon.name}'),
-        (11,1,80,'player',0,'','Demolitions Man','','{$player.link} has the best demolition percentage of {$award.value}','{$bombrunner} / {$bombexploded} * 100','desc','',25,'%0.02f%%','source','gungames',1,'Players with the highest percentage of spawning with and planting the bomb and actually having it explode.'),
-        (12,1,100,'player',0,'','Bomb Defusal Expert','','{$player.link} has the best defusal rating of {$award.value}','{$bombdefused} / {$bombdefuseattempts} * 100','desc','{$bombdefused} >= 5',25,'%0.02f%%','source','gungames',1,'Player with the best bomb defuses percentage (must have at least 5 defuses to count)'),
+        (11,1,80,'player',0,'','Demolitions Man','','{$player.link} has the best demolition percentage of {$award.value}','{$bombrunner} / {$bombexploded} * 100','desc','',25,'%0.02f%%','source','cstrikes',1,'Players with the highest percentage of spawning with and planting the bomb and actually having it explode.'),
+        (12,1,100,'player',0,'','Bomb Defusal Expert','','{$player.link} has the best defusal rating of {$award.value}','{$bombdefused} / {$bombdefuseattempts} * 100','desc','{$bombdefused} >= 5',25,'%0.02f%%','source','cstrikes',1,'Player with the best bomb defuses percentage (must have at least 5 defuses to count)'),
         (13,1,30,'player',0,'','Most Bonus Points','','{$player.link} achieved the most bonus points ({$award.value})','{$totalbonus}','desc','',25,'commify',NULL,NULL,1,'Player that has achieved the most bonus points.'),
         (23,1,50,'player',1,'','Worst Teammate','','{$player.link} has killed the most teammates ({$award.value})','{$ffkills}','desc','',0,'commify',NULL,NULL,1,'Player with the most friendly fire kills (ie: Worst Teammate)'),
         (25,1,60,'player',1,'','Worst Team Kill Percentage','','{$player.link} has the highest team kill percentage ({$award.value})','{$ffkills} / {$kills} * 100','desc','',0,'%0.02f%%',NULL,NULL,1,'Player with the highest team kill percentage.'),
-        (26,1,120,'player',1,'','Most Hostages Killed','','{$player.link} has killed the most hostages ({$award.value})','{$killedhostages}','desc','',0,'%s','source','gungames',1,'Players that like to kill hostages instead of rescuing them.');
+        (26,1,120,'player',1,'','Most Hostages Killed','','{$player.link} has killed the most hostages ({$award.value})','{$killedhostages}','desc','',0,'%s','source','cstrikes',1,'Players that like to kill hostages instead of rescuing them.'),
+        (80,1,800,'player',0,'','Most Levels Gained','','{$player.link} has gained a total of {$award.value} levels','{$lvlsgained} * 100','desc','{$lvlsgained} >= 5',25,'commify','source','gungames',1,'Player with the most levels gained (must have gained at least 5 levels to count)'),
+        (81,1,810,'player',0,'','Most Knife Levels Gained','','{$player.link} has gained a total of {$award.value} knife levels','{$knifelvlsgained} * 100','desc','{$lvlsgained} >= 5',25,'commify','source','gungames',1,'Player with the most knife levels gained (must have gained at least 5 levels to count)'),
+        (82,1,820,'player',1,'','The Eternal Victim','','{$player.link} has lost the most levels ({$award.value})','{$lvlslost}','desc','',0,'commify',NULL,NULL,1,'Player who has lost the most levels'),
+        (83,1,830,'player',0,'','Blood Sucking Vampire','','{$player.link} has stolen the most levels with a knife ({$award.value})','{$knifesteal}','desc','',25,'commify','source','gungames',1,'Player with the most levels stolen with a knife'),
+        (84,1,840,'player',0,'','Take Me to Your Leader','','{$player.link} has been appointed leader the most times ({$award.value})','{$leader}','desc','{$leader} >= 5',25,'commify','source','gungames',1,'Player appointed leader the most times (must have been appointed at least 5 times to count)');
         
 INSERT INTO `ps_config` (`id`, `conftype`, `section`, `var`, `value`, `label`, `type`, `locked`, `verifycodes`, `options`, `help`) 
     VALUES 
